--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 body {
-  font-family: Arial, sans-serif;
+ font-family: "Baskervville SC", serif;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f0f0f0;
+  background-color: #718355;
+  color:#F9FEFF;
 }
 
 .container {
@@ -24,7 +25,7 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 36px;
-  background-color: #fff;
+  background-color: #E9F5DB;
   border: 1px solid #aaa;
   cursor: pointer;
 }
@@ -38,12 +39,17 @@ body {
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
-  background-color: #4caf50;
+  background-color: #CFE1B9;
   color: #fff;
   border: none;
   border-radius: 4px;
+  font-family: "Baskervville SC", serif;
 }
 
 .btn:hover {
-  background-color: #45a049;
+  background-color: #B5C99A;
 }
+.win {
+  background-color: #FFD1DC;
+}
+
